--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@sanity/client": "^7.14.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "lucide-react": "^0.563.0",
+    "next-sanity": "^12.0.14",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
