--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "predeploy": "npm run build && touch out/.nojekyll",
+    "deploy": "gh-pages -d out -t"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -22,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.563.0",
     "next-sanity": "^12.0.14",
     "tailwindcss": "^4",
